2005-11-21  Andy Wingo  <wingo@pobox.com>

	patch from: Sebastien Cote <sebas642@yahoo.ca>
	
	* gst-libs/gst/rtp/gstrtpbuffer.h: 
	* gst-libs/gst/rtp/gstrtpbuffer.c
	(gst_rtpbuffer_get_payload_buffer): New function. Fixes #321451.

2005-11-21  Andy Wingo  <wingo@pobox.com>

	* gst/playback/gstplaybin.c (gen_audio_element) 
	(gen_video_element): Use the new MISSING_PLUGIN core error
	category. Closes #320060.

	* ext/vorbis/vorbisdec.c (vorbis_dec_sink_event): 
	* gst/videorate/gstvideorate.c (gst_videorate_event):
	* ext/theora/theoradec.c (theora_dec_sink_event): 
	* ext/theora/theoraenc.c (theora_enc_sink_event): Don't take
	stream lock.

	* gst/subparse/gstsubparse.c (gst_subparse_src_event):
	* ext/ogg/gstoggdemux.c (gst_ogg_demux_perform_seek): Update for
	stream lock changes.

2005-11-21  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_class_init), (gst_base_audio_sink_init),
	(gst_base_audio_sink_provide_clock),
	(gst_base_audio_sink_set_clock), (gst_base_audio_sink_render),
	(gst_base_audio_sink_change_state):
	* gst/audioresample/gstaudioresample.c:
	Segment update fix.

2005-11-21  Andy Wingo  <wingo@pobox.com>

	* *.h:
	* *.c: Ran scripts/update-macros. Oh yes.

2005-11-21  Tim-Philipp Müller  <tim at centricular dot net>

	* sys/ximage/Makefile.am:
	* sys/ximage/ximage.c:
	  Rename ximage plugin to ximagesink (#321426) (Don't forget to
	  remove your old libgstximage.* manually if necessary).

2005-11-21  Michael Smith <msmith@fluendo.com>

	* ext/vorbis/vorbisenc.c: (gst_vorbisenc_setup):
	  Minimal fix for bug #320200: set the min/max bitrate in the correct
	  units. A better fix would be to upgrade to the RATEMANAGE2
	  interface, rather than using the deprecated interface used here, but
	  that would require an update in our libvorbis dependency (to 1.1),
	  which is probably undesirable.

2005-11-21  Jan Schmidt  <thaytan@mad.scientist.com>

	* ext/libvisual/visual.c: (get_buffer):